# CorPlayer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Main.qml  MediaPlayer.cpp  MediaPlayer.h  MetadataManager.cpp  MetadataManager.h  README.md  backend.cpp  main.cpp  mediaplayer.cpp  mediaplayer.h
icons/: icons.qrc
resources/: icons.qrc
src/: CMakeLists.txt  CMakePresets.json  activetrackmanager.cpp  activetrackmanager.h  asynccoverprovider.cpp  asynccoverprovider.h  cormanager.cpp  cormanager.h  corplayer.cpp  corplayer.h  filescanner.cpp  filescanner.h  fonts.qrc  main.cpp  mediaplayerwrapper.cpp  mediaplayerwrapper.h  metadata.cpp  metadata.hpp  metadatafields.cpp  metadatafields.h  pch.h  playermanager.cpp  playermanager.h  playerutils.cpp  playerutils.h  playerutils.hpp  trackmetadatamanager.cpp  trackmetadatamanager.h  trackplaylist.cpp  trackplaylist.h  trackplaylistproxymodel.cpp  trackplaylistproxymodel.h  trackprogresswatchdog.cpp  trackprogresswatchdog.h  trackprogresswatcher.cpp  trackprogresswatcher.h  trackswatchdog.cpp  trackswatchdog.h
src/database/: basedatabase.cpp  basedatabase.h  cordatabase.cpp  cordatabase.h  databasemanager.cpp  databasemanager.h  dbconnection.cpp  dbconnection.h  dbconnectionpool.cpp  dbconnectionpool.h  dbschema.cpp  dbschema.h  playlistdatabase.cpp  playlistdatabase.h  sqlquery.cpp  sqlquery.h  sqltransaction.cpp  sqltransaction.h  trackdatabase.cpp  trackdatabase.h
src/fonts/: fonts.qrc
src/models/: playlistcollectionmodel.cpp  playlistcollectionmodel.hpp  playlistmodel.cpp  playlistmodel.hpp  playlistproxymodel.cpp  playlistproxymodel.hpp  trackcollectionmodel.cpp  trackcollectionmodel.hpp
src/playlist/: playlistmodel.cpp  playlistmodel.hpp  playlistparser.cpp  playlistparser.h  trackplaylist.cpp  trackplaylist.h  trackplaylistproxymodel.cpp  trackplaylistproxymodel.h
src/qml/: IconRoundButton.qml  Main.qml  PlaybackControl.qml  PlaybackControlBar.qml  TrackBrowser.qml  TrackControl.qml  VolumeControl.qml
src/qml/components/: DurationSlider.qml  IconButton.qml  IconButtonWithBackground.qml  IconRoundButton.qml  ImageWithFallback.qml  MaterialButton.qml  PlaylistTrackItem.qml  StepSlider.qml  TrackInfo.qml  VolumeControl.qml  VolumeSlider.qml  fonts.qrc
src/qml/components/fonts/: Fonts.qml  qmldir
src/qml/dialogs/: DeletePlaylistDialog.qml  NewPlaylistDialog.qml  RenamePlaylistDialog.qml
src/taglib/: tagreader.cpp  tagreader.h  tracktags.cpp  tracktags.h
tests/: CMakeLists.txt  asynccoverprovider_test.cpp  library_test.cpp  mediaplayerwrapper_test.cpp  playlistproxymodel_test.cpp  tagreader_test.cpp  testutils.cpp  testutils.h
tests/testdata/: audio.qrc
tests/testdata/audio/: audio.flac  audio.m4a  audio.opus
